# turkish-boite-scraper

./: .gitignore  README.md  naf.py  naf2008_liste_n5.csv  naf2008_liste_n5.xls  pyproject.toml  scraper.py
