[project]
name = "turkish-boite-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inquirer>=3.4.1",
    "loguru>=0.7.3",
    "openai>=1.107.0",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "xlrd>=2.0.2",
]
